w3_band/assets/css/style.css
/* Reset CSS */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html {
    font-family: Arial, Helvetica, sans-serif;
}
/*
    1. Từ ngoài vào trong
    2. Từ trên xuống dưới
    3. Tổng quan đến chi tiết
*/

/*
    1. Vị trí
    2. Kích thước (width, height)
    3. Màu sắc
    4. Kiểu dáng (kiểu chữ, hình tròn, vuông, ...)
*/
#main {

}

#header {
    height: 46px;
    background-color: #000;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
}

#nav {
    display: inline-block;
}

#nav, .subnav {
    list-style-type: none;
}

#nav > li {
    display: inline-block;
}

#nav li {
    position: relative;
}

#nav > li > a {
    color: #fff;
    text-transform: uppercase;
}

#nav li a {
    text-decoration: none;
    line-height: 46px;
    padding: 0 24px;
    display: block;
}

#nav li:hover .subnav {
    display: block;
}

#nav > li:hover > a,
#nav .subnav li:hover a {
    color: #000 !important;
    background-color: #ccc !important;
}

#nav .subnav {
    display: none;
    min-width: 160px;
    position: absolute;
    top: 100%;
    left: 0;
    background-color: #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

#nav .subnav a {
    color: #000;
    padding: 0 12px;
    line-height: 38px;
}

#nav .nav-arrow-down {
    font-size: 14px;
}

#header .search-btn {
    float: right;
    padding: 0 21px;
}

#header .search-btn:hover {
    background-color: #f44336!important;
    cursor: pointer;
}

#header .search-icon {
    color: #fff;
    font-size: 20px;
    line-height: 46px;
}

#slider {
    position: relative;
    margin-top: 46px;
    padding-top: 50%;
    background: url('/w3_band/assets/img/slider1.jpg') top center / cover no-repeat;
}

#slider .text-content {
    position: absolute;
    bottom: 47px;
    color: #fff;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
    /* Cách 2
    width: 100%; */
    /* Cách 3
    left: 0;
    right: 0; */
}

#slider .text-heading {
    font-weight: 500;
    font-size: 24px;
}

#slider .text-description {
    font-size: 15px;
    margin-top: 25px;
}

#content {

}

#footer {

}

